--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,7 +1,7 @@
 {% assign sorted_cats = site.categories | sort %}
 {% for category in sorted_cats reversed %}
 <ul class="post-list {{category[0] | uri_escape | downcase }}">
-  <h2>{{category[0] | capitalize}}</h2>
+  <!-- <h2>{{category[0] | capitalize}}</h2> -->
   {% assign sorted_posts = category[1] %}
       {% for post in sorted_posts | group_by:"type"  %}
       <li class="post {{post.type}}">
